src/index.scss
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&display=swap");

body {
  font-family: "Poppins", sans-serif;
  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif; */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.light-bg {
  background: rgb(250, 253, 124);
  background: linear-gradient(
    30deg,
    rgba(250, 253, 124, 1) -50%,
    rgb(183, 228, 249, 1) 150%
  );
}

.dark-bg {
  background: rgba(49, 50, 1, 1);
  background: linear-gradient(
    30deg,
    rgba(49, 50, 1, 1) -50%,
    rgb(6, 50, 71, 1) 150%
  );
}

/* Tailwind Css directives */
@tailwind base;
@tailwind components;
@tailwind utilities;

.btn {
  @apply rounded-md
    shadow-md
    font-semibold
   bg-yellow-100
   text-gray-700
   hover:bg-yellow-50
   hover:text-gray-900
   dark:bg-gray-900
   dark:text-yellow-100
   dark:hover:bg-gray-800
   dark:hover:text-yellow-50
    transition
    duration-150;
}

.filter-field {
  @apply flex
    my-2
    mx-2
    items-center    
    w-full
    sm:w-5/12
    lg:w-auto;
}

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

